ttools: change CatMapper seqcol column short->int
The seqcol column which tracks which input table a concatenated table
row came from was of type short.  But at least one user wants to use
this for >2^15 input tables, so extend it to type int.